force-app/main/default/objects/DemoObject__c/fields/ProfilePermissionCheck__c.field-meta.xml
<CustomField>
    <fullName>ProfilePermissionCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProfilePermissionCheck</label>
    <type>Checkbox</type>
</CustomField>