force-app/main/default/objects/DemoObject__c/fields/ProfilePermissionCheckV2__c.field-meta.xml
<CustomField>
    <fullName>ProfilePermissionCheckV2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProfilePermissionCheckV2</label>
    <type>Checkbox</type>
</CustomField>