force-app/main/default/objects/DemoObject__c/fields/ProfilePermissionCheckV3__c.field-meta.xml
<CustomField>
    <fullName>ProfilePermissionCheckV3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProfilePermissionCheckV3</label>
    <type>Checkbox</type>
</CustomField>